fixes issue #135 Chrome z-index bug

--- a/front_end/css/less/module/reg-header.less
+++ b/front_end/css/less/module/reg-header.less
@@ -29,6 +29,7 @@
 .main-head {
     border-bottom: 3px solid @dark_gray;
     background: #fff;
+    z-index: 1000;
 }
 
 .main-head {
@@ -60,6 +61,7 @@
     background: @bg_gray;
     height: 2.125em;
     border-bottom: 1px solid @medium_gray;
+    z-index: 1000;
 }
 
 .reg-header a:link,
